--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/Athnei/Rarby#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "puppeteer": "^5.2.1",
+    "tesseract.js": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.6.0",
+    "@types/puppeteer": "^3.0.1",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^4.0.2"
