--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "RARBG scraper",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc -p ."
   },
   "repository": {
@@ -21,12 +21,13 @@
   "homepage": "https://github.com/Athnei/Rarby#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "pug": "^3.0.0",
     "puppeteer": "^5.2.1",
     "tesseract.js": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.6.4",
     "@types/puppeteer": "^3.0.1",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
