--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   "dependencies": {
     "express": "^4.17.1",
     "pug": "^3.0.0",
-    "puppeteer": "^5.2.1",
-    "tesseract.js": "^2.1.1"
+    "puppeteer": "^5.4.1",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-stealth": "^2.6.5",
+    "tesseract.js": "^2.1.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.7",
-    "@types/node": "^14.6.4",
-    "@types/puppeteer": "^3.0.1",
-    "nodemon": "^2.0.4",
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.14.7",
+    "@types/puppeteer": "^3.0.5",
+    "nodemon": "^2.0.6",
     "ts-node": "^8.10.2",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.5"
   }
 }
