--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "build": "tsc -p ."
   },
   "repository": {
@@ -31,8 +31,7 @@
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.7",
     "@types/puppeteer": "^3.0.5",
-    "nodemon": "^2.0.6",
-    "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   }
 }
