--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Athnei/Rarby#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "lowdb": "^1.0.0",
     "pug": "^3.0.0",
     "puppeteer": "^5.4.1",
     "puppeteer-extra": "^3.1.15",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/lowdb": "^1.0.9",
     "@types/node": "^14.14.7",
     "@types/puppeteer": "^3.0.5",
     "ts-node-dev": "^1.0.0",
