--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
+    "moment": "^2.29.1",
     "pug": "^3.0.0",
     "puppeteer": "^5.4.1",
     "puppeteer-extra": "^3.1.15",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/lowdb": "^1.0.9",
+    "@types/moment": "^2.13.0",
     "@types/node": "^14.14.7",
     "@types/puppeteer": "^3.0.5",
     "ts-node-dev": "^1.0.0",
