--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "puppeteer": "^5.4.1",
     "puppeteer-extra": "^3.1.15",
     "puppeteer-extra-plugin-stealth": "^2.6.5",
-    "tesseract.js": "^2.1.4"
+    "tesseract.js": "^2.1.4",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
@@ -36,6 +37,7 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.7",
     "@types/puppeteer": "^3.0.5",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   }
